# auth0-zoo-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent/: .env.sample  agent.py  auth.py  main.py
agent/static/: app.js  index.html
api/: .env.sample  auth.py  catalog.py  db.py  dependencies.py  main.py  schema.py
