[project]
name = "auth0-genai-toolcaling-zoomanagement"
version = "0.1.0"
description = "A tutorial project demonstrating LangChain with Auth0 first-party toolcalling"
authors = [
    {name = "Raphael",email = "raphael@dovale.net"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "openai (>=1.88.0,<2.0.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "langchain-openai (>=0.3.24,<0.4.0)",
    "auth0-fastapi-api (>=1.0.0b3,<2.0.0)",
    "auth0-fastapi (>=1.0.0b4,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
